@@ -1,4 +1,4 @@
-# Copyright 2003-2004, 2006-2012 Free Software Foundation, Inc.
+# Copyright 2003, 2004, 2006, 2007, 2008, 2009 Free Software Foundation, Inc.
 
 # This program is free software; you can redistribute it and/or modify
 # it under the terms of the GNU General Public License as published by
@@ -14,6 +14,10 @@
 # along with this program.  If not, see <http://www.gnu.org/licenses/>.
 
 # This file was written by Adam Fedor (fedor@gnu.org)
+
+if $tracelevel then {
+	strace $tracelevel
+}
 
 set testfile "basicclass"
 set srcfile ${testfile}.m
@@ -72,12 +76,16 @@ proc deduce_language_of_main {} {
 }
 
 proc do_objc_tests {} {
+    global prms_id
+    global bug_id
     global subdir
     global objdir
     global srcdir
     global binfile
     global gdb_prompt
 
+    set prms_id 0
+    set bug_id 0
 
     # Start with a fresh gdb.
 
