@@ -1,4 +1,4 @@
-# Copyright 2003, 2007-2012 Free Software Foundation, Inc.
+# Copyright 2003, 2007, 2008, 2009 Free Software Foundation, Inc.
 
 # This program is free software; you can redistribute it and/or modify
 # it under the terms of the GNU General Public License as published by
@@ -17,6 +17,10 @@
 
 # This file was written by Adam Fedor (fedor@gnu.org)
 
+if $tracelevel then {
+	strace $tracelevel
+}
+
 set testfile "nondebug"
 set srcfile ${testfile}.m
 set binfile ${objdir}/${subdir}/${testfile}
@@ -30,12 +34,16 @@ if {[gdb_compile_objc "${srcdir}/${subdir}/${srcfile}" "${binfile}" executable [
 }
 
 proc do_objc_tests {} {
+    global prms_id
+    global bug_id
     global subdir
     global objdir
     global srcdir
     global binfile
     global gdb_prompt
 
+    set prms_id 0
+    set bug_id 0
 
     # Start with a fresh gdb.
 
